first payment tests
